2002-04-18  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/*: Updated.

	* configure.in: Add $srcdir to the include path so it catches
	iconv-detect.h.

2002-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (datetok): Treat ',' as a token delimeter. Also
	updated the datetok lookup table.

	* configure.in: Check for off_t, size_t, and ssize_t.

2002-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_uuencode_close): Fixed a bug that
	crept in during my simplification.

2002-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (g_mime_message_add_recipients_from_string):
	Destroy the temporary addrlist.

2002-03-29  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Detect the iconv-friendly formats for iso charsets
	at configure time and dump them into iconv-detect.h for use in
	gmime-charset.c.

	* gmime-charset.c: Updated to use iconv-detect.h if it exists.

2002-03-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-param.c (rfc2184_decode): Don't bother using
	g_mime_charset_name here either because g_mime_iconv_open does it
	for us.
	(encode_param): And again here.

	* gmime-utils.c (rfc2047_decode_word): Don't bother with a
	charenc, we don't need to get the iconv-friendly
	name. g_mime_iconv_open does that for us.
	(rfc2047_encode_word): Same.

	* gmime-charset.c (main): Added support for multibyte charsets.

	* gen-multibyte.c: Generates character tables for multibyte
	charsets such as iso-2022-jp and euc-kr.

2002-03-23  Jeffrey Stedfast  <fejj@ximian.com>

	* unicode.[c,h]: New private source files to do some unicode
	shiz. Ripped out of gmime-charset.c

	* gmime-charset.c: Removed unicode stuff.

	* gmime-utils.c (g_mime_utils_8bit_header_encode): Rewritten to be
	smarter about grouping like-words.
	(rfc2047_encode_phrase_get_words): Splits out words.
	(rfc2047_encode_phrase_merge_words): Merges like-words.
	(rfc2047_encode_phrase): This is the muscle behind
	8bit_header_encode.