@@ -1,3 +1,8 @@
+2002-04-19  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-parser.c (g_mime_parser_construct_message): No longer
+	takes a 'preserve_headers' argument.
+
 2002-04-18  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* docs/*: Updated.
